--- a/SCSS/_sidebar.scss
+++ b/SCSS/_sidebar.scss
@@ -390,7 +390,7 @@
                             > div {
                                 background-color: var(--highlight-color--blue-bg-dark);
                                 border-radius: 4px;
-                                border: 0.1rem solid #2F4E61;
+                                border: 0.1rem solid #3A5E76;
                             }
                         }
                         .document-list-item__folder-icon {
@@ -403,7 +403,7 @@
                             > div {
                                 background-color: var(--highlight-color--purple-bg-dark);
                                 border-radius: 4px;
-                                border: 0.1rem solid #683E62;
+                                border: 0.1rem solid #7B4874;
                             }
                         }
                         .document-list-item__folder-icon {
